--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Page</title>
+    <title>Mindfulness Community</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -30,17 +30,45 @@
             width: 100%;
             bottom: 0;
         }
+        .social-links {
+            margin-top: 1em;
+        }
+        .social-links a {
+            margin: 0 10px;
+            text-decoration: none;
+            color: #4CAF50;
+        }
     </style>
 </head>
 <body>
     <header>
-        <h1>Welcome to My GitHub Page</h1>
+        <h1>Welcome to the Mindfulness Community</h1>
     </header>
     <main>
-        <p>This is a sample webpage hosted on GitHub Pages. You can customize it to suit your needs.</p>
+        <p>Join us in our journey towards mindfulness and inner peace. Connect with like-minded individuals and share your experiences.</p>
+        <div class="social-links">
+            <a href="https://facebook.com" target="_blank">Facebook</a>
+            <a href="https://twitter.com" target="_blank">Twitter</a>
+            <a href="https://instagram.com" target="_blank">Instagram</a>
+        </div>
     </main>
     <footer>
-        <p>© 2024 My GitHub Page</p>
+        <p>© 2024 Mindfulness Community | Powered by GitHub</p>
     </footer>
+    <script>
+        // Example JavaScript to enhance user experience
+        document.addEventListener('DOMContentLoaded', function() {
+            const links = document.querySelectorAll('.social-links a');
+            links.forEach(link => {
+                link.addEventListener('mouseover', function() {
+                    this.style.color = '#333';
+                });
+                link.addEventListener('mouseout', function() {
+                    this.style.color = '#4CAF50';
+                });
+            });
+        });
+    </script>
 </body>
 </html>
+
