--- a/index.html
+++ b/index.html
@@ -3,36 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mindfulness & Wellness Community</title>
+    <title>Mindfulness Community</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Mindfulness & Wellness Community</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="testimonials.html">Testimonials</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+        <div class="hero">
+            <h1>Welcome to the Mindfulness Community</h1>
+            <p>Join us in our journey towards mindfulness and inner peace. Connect with like-minded individuals and share your experiences.</p>
+            <button onclick="location.href='contact.html'">Get Started</button>
+        </div>
     </header>
     <main>
-        <section class="subscribe">
-            <h2>Subscribe to Our Newsletter</h2>
-            <form id="subscribe-form">
-                <input type="email" id="email" placeholder="Enter your email" required>
-                <button type="submit">Subscribe</button>
-            </form>
+        <section class="testimonials">
+            <!-- Testimonial carousel will go here -->
         </section>
-        <section class="social-media">
-            <h2>Follow Us</h2>
-            <div class="social-buttons">
-                <a href="#" class="social-button">Facebook</a>
-                <a href="#" class="social-button">Twitter</a>
-                <a href="#" class="social-button">Instagram</a>
-            </div>
-        </section>
+        <div class="social-links">
+            <a href="https://facebook.com" target="_blank">Facebook</a>
+            <a href="https://twitter.com" target="_blank">Twitter</a>
+            <a href="https://instagram.com" target="_blank">Instagram</a>
+        </div>
     </main>
     <footer>
-        <p>Powered by GitHub</p>
+        <p>© 2024 Mindfulness Community | Powered by GitHub</p>
+        <ul>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms of Service</a></li>
+            <li><a href="#">Contact Info</a></li>
+        </ul>
     </footer>
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
+
 
 
 
