--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Join the Mindfulness Community for mindfulness and inner peace. Connect with like-minded individuals and share your experiences.">
+    <meta name="keywords" content="mindfulness, community, inner peace, meditation, wellness">
     <title>Mindfulness Community</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <nav>
+        <nav aria-label="Main Navigation">
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="services.html">Services</a></li>
@@ -24,8 +26,15 @@
         </div>
     </header>
     <main>
+        <section class="services">
+            <h2>Our Services</h2>
+            <p>Explore our range of mindfulness and wellness services.</p>
+            <a href="services.html" class="button">Learn More</a>
+        </section>
         <section class="testimonials">
-            <!-- Testimonial carousel will go here -->
+            <h2>Testimonials</h2>
+            <p>Read what our community members have to say.</p>
+            <a href="testimonials.html" class="button">Read More</a>
         </section>
         <div class="social-links">
             <a href="https://facebook.com" target="_blank">Facebook</a>
@@ -44,6 +53,7 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
 
 
 
