--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Join the Mindfulness Community for mindfulness and inner peace. Connect with like-minded individuals and share your experiences.">
     <meta name="keywords" content="mindfulness, community, inner peace, meditation, wellness">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Your Name">
     <title>Mindfulness Community</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -36,6 +38,18 @@
             <p>Read what our community members have to say.</p>
             <a href="testimonials.html" class="button">Read More</a>
         </section>
+        <section class="contact-form">
+            <h2>Contact Us</h2>
+            <form action="submit_form.php" method="post">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" required></textarea>
+                <button type="submit">Submit</button>
+            </form>
+        </section>
         <div class="social-links">
             <a href="https://facebook.com" target="_blank">Facebook</a>
             <a href="https://twitter.com" target="_blank">Twitter</a>
@@ -53,6 +67,7 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
 
 
 
