--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <header>
+        <button id="sidebarToggle" class="sidebar-toggle">☰</button>
         <nav aria-label="Main Navigation">
             <ul>
                 <li><a href="index.html" aria-current="page">Home</a></li>
@@ -27,6 +28,15 @@
             <button class="cta-button" onclick="location.href='contact.html'">Get Started</button>
         </div>
     </header>
+    <aside id="sidebar" class="sidebar">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="testimonials.html">Testimonials</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </aside>
     <main>
         <section class="services">
             <h2>Our Services</h2>
