--- a/index.html
+++ b/index.html
@@ -9,6 +9,30 @@
     <meta name="author" content="Your Name">
     <title>Mindfulness Community</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Add some basic styles for the sidebar */
+        .sidebar {
+            display: none;
+            position: fixed;
+            left: 0;
+            top: 0;
+            width: 250px;
+            height: 100%;
+            background-color: #f4f4f4;
+            padding: 20px;
+            box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+        }
+        .sidebar-toggle {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            background-color: #333;
+            color: #fff;
+            border: none;
+            padding: 10px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -74,6 +98,16 @@
             <li><a href="#">Contact Info</a></li>
         </ul>
     </footer>
-    <script src="scripts.js"></script>
+    <script>
+        document.getElementById('sidebarToggle').addEventListener('click', function() {
+            var sidebar = document.getElementById('sidebar');
+            if (sidebar.style.display === 'none' || sidebar.style.display === '') {
+                sidebar.style.display = 'block';
+            } else {
+                sidebar.style.display = 'none';
+            }
+        });
+    </script>
 </body>
 </html>
+
