--- a/services.html
+++ b/services.html
@@ -19,7 +19,18 @@
             <h2>Service 2</h2>
             <p>Description of Service 2.</p>
         </section>
-        <!-- Add more services as needed -->
+        <section>
+            <h2>Life Coaching</h2>
+            <p>Our life coaching service helps you achieve your personal and professional goals through personalized guidance and support.</p>
+        </section>
+        <section>
+            <h2>Holistic Health</h2>
+            <p>Our holistic health service focuses on the whole person, integrating physical, mental, and spiritual health for overall well-being.</p>
+        </section>
+        <section>
+            <h2>Lucid Dream Coaching</h2>
+            <p>Our lucid dream coaching service helps you learn techniques to become aware and take control of your dreams, enhancing your dream experiences.</p>
+        </section>
     </main>
     <footer>
         <p>© 2024 Mindfulness Community</p>
