--- a/contact.html
+++ b/contact.html
@@ -11,15 +11,17 @@
         <h1>Contact Us</h1>
     </header>
     <main>
-        <form action="submit_form.php" method="post">
+        <!-- Contact Form Start -->
+        <form action="submit_form.php" method="post" class="contact-form">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
             <label for="message">Message:</label>
             <textarea id="message" name="message" required></textarea>
-            <button type="submit">Send</button>
+            <button type="submit" class="submit-button">Send</button>
         </form>
+        <!-- Contact Form End -->
     </main>
     <footer>
         <p>© 2024 Mindfulness Community</p>
