Update and rename blog.html to dAPP.html
Signed-off-by: ryuu000 <99164869+ryuu000@users.noreply.github.com>

--- a/dAPP.html
+++ b/dAPP.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
+    <title>dAPP</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Blog</h1>
+        <h1>dAPP</h1>
     </header>
     <main>
         <article>
