--- a/dAPP.html
+++ b/dAPP.html
@@ -11,11 +11,34 @@
         <h1>dAPP</h1>
     </header>
     <main>
-        <article>
-            <h2>Blog Post Title</h2>
-            <p>Content of the blog post.</p>
-        </article>
-        <!-- Add more blog posts as needed -->
+        <section>
+            <h2>Sample Voting dApp</h2>
+            <form id="voteForm">
+                <label for="option1">
+                    <input type="radio" id="option1" name="vote" value="1">
+                    Option 1
+                </label>
+                <br>
+                <label for="option2">
+                    <input type="radio" id="option2" name="vote" value="2">
+                    Option 2
+                </label>
+                <br>
+                <button type="submit">Vote</button>
+            </form>
+            <p id="voteResult"></p>
+            <script>
+                document.getElementById('voteForm').addEventListener('submit', function(event) {
+                    event.preventDefault();
+                    const selectedOption = document.querySelector('input[name="vote"]:checked').value;
+                    document.getElementById('voteResult').innerText = 'You voted for option ' + selectedOption;
+                });
+            </script>
+        </section>
+        <section>
+            <h2>About this dApp</h2>
+            <p>This is a sample voting dApp frontend. In future updates, this dApp will be expanded with smart contract integration, allowing for decentralized and transparent voting on the blockchain.</p>
+        </section>
     </main>
     <footer>
         <p>© 2024 Mindfulness Community</p>
