--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="hero">
             <h1>Welcome to the Mindfulness Community</h1>
             <p>Join us in our journey towards mindfulness and inner peace. Connect with like-minded individuals and share your experiences.</p>
-            <button class="cta-button" onclick="location.href='contact.html'">Get Started</button>
+            <button class="cta-button" onclick="location.href='about.html'">Get Started</button>
         </div>
     </header>
     <aside id="sidebar" class="sidebar">
