--- a/about.html
+++ b/about.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>About Us</h1>
+    </header>
+    <main>
+        <section>
+            <h2>Life Coaching</h2>
+            <p>At Mindfulness Community, our life coaching service is designed to help you achieve your personal and professional goals. We believe in personalized guidance and support to help you navigate through challenges and realize your full potential. Our experienced coaches are here to empower you with the tools and strategies needed to succeed.</p>
+        </section>
+        <section>
+            <h2>Lucid Dreaming</h2>
+            <p>Experience the transformative power of lucid dreaming with our coaching services. At Mindfulness Community, we teach you techniques to become aware and take control of your dreams. Our goal is to enhance your dream experiences, providing you with insights and a deeper connection to your subconscious mind. Unlock the potential of your dreams with our expert guidance.</p>
+        </section>
+    </main>
+    <footer>
+        <p>© 2024 Mindfulness Community</p>
+    </footer>
+</body>
+</html>
