--- a/dAPP.html
+++ b/dAPP.html
@@ -7,7 +7,23 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
     <style>
-        button[type="submit"] {
+        body {
+            background-color: #121212;
+            color: #ffffff;
+            font-family: 'Arial', sans-serif;
+        }
+        header {
+            background: #1c1c1c;
+            padding: 20px;
+            text-align: center;
+        }
+        .vote-section {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 50px;
+        }
+        button.vote-button {
             background-color: #4CAF50;
             color: white;
             padding: 15px 20px;
@@ -15,20 +31,21 @@
             text-decoration: none;
             display: inline-block;
             font-size: 16px;
-            margin: 4px 2px;
+            margin: 10px;
             cursor: pointer;
             border: none;
             border-radius: 12px;
             transition: background-color 0.3s ease, transform 0.3s ease;
         }
-
-        button[type="submit"]:hover {
+        button.vote-button:hover {
             background-color: #45a049;
             transform: scale(1.1);
         }
-
-        button[type="submit"]:active {
+        button.vote-button:active {
             transform: scale(0.9);
+        }
+        .result {
+            margin-top: 20px;
         }
     </style>
 </head>
@@ -37,22 +54,13 @@
         <h1>dAPP</h1>
     </header>
     <main>
-        <section>
+        <section class="vote-section">
             <h2>Sample Voting dApp</h2>
             <form id="voteForm">
-                <label for="option1">
-                    <input type="radio" id="option1" name="vote" value="1">
-                    Option 1
-                </label>
-                <br>
-                <label for="option2">
-                    <input type="radio" id="option2" name="vote" value="2">
-                    Option 2
-                </label>
-                <br>
-                <button type="submit">Vote</button>
+                <button type="button" class="vote-button" data-vote="1">Upvote</button>
+                <button type="button" class="vote-button" data-vote="2">Downvote</button>
             </form>
-            <p id="voteResult"></p>
+            <p id="voteResult" class="result"></p>
             <script>
                 let web3;
                 let contract;
@@ -71,14 +79,15 @@
                     }
                 }
 
-                document.getElementById('voteForm').addEventListener('submit', async function(event) {
-                    event.preventDefault();
-                    const selectedOption = document.querySelector('input[name="vote"]:checked').value;
-                    const accounts = await web3.eth.getAccounts();
-                    await contract.methods.vote(selectedOption).send({ from: accounts[0] });
-                    const voteCount1 = await contract.methods.getVotes(1).call();
-                    const voteCount2 = await contract.methods.getVotes(2).call();
-                    document.getElementById('voteResult').innerText = `You voted for option ${selectedOption}. Current votes - Option 1: ${voteCount1}, Option 2: ${voteCount2}`;
+                document.querySelectorAll('.vote-button').forEach(button => {
+                    button.addEventListener('click', async function() {
+                        const voteType = this.getAttribute('data-vote');
+                        const accounts = await web3.eth.getAccounts();
+                        await contract.methods.vote(voteType).send({ from: accounts[0] });
+                        const voteCount1 = await contract.methods.getVotes(1).call();
+                        const voteCount2 = await contract.methods.getVotes(2).call();
+                        document.getElementById('voteResult').innerText = `Upvotes: ${voteCount1}, Downvotes: ${voteCount2}`;
+                    });
                 });
 
                 window.addEventListener('load', init);
@@ -86,7 +95,7 @@
         </section>
         <section>
             <h2>About this dApp</h2>
-            <p>This is a sample voting dApp frontend. In future updates, this dApp will be expanded with smart contract integration, allowing for decentralized and transparent voting on the blockchain.
+            <p>This is a sample voting dApp frontend. In future updates, this dApp will be expanded with smart contract integration, allowing for decentralized and transparent voting on the blockchain.</p>
         </section>
     </main>
     <footer>
