--- a/dAPP.html
+++ b/dAPP.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dAPP</title>
+    <title>Mindfulness dAPP</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
     <style>
         body {
-            background-color: #f5f5f5;
+            background-color: #ffffff;
             color: #333;
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
         }
         header {
-            background: #4CAF50;
+            background: linear-gradient(90deg, #4CAF50, #388E3C);
             padding: 20px;
             text-align: center;
             color: white;
@@ -30,13 +30,25 @@
             margin-right: 10px;
         }
         main {
-            padding-top: 80px;
+            padding-top: 100px;
+            max-width: 800px;
+            margin: auto;
         }
         .vote-section {
             display: flex;
             flex-direction: column;
             align-items: center;
             margin-top: 50px;
+        }
+        .wellness-professionals {
+            margin: 20px 0;
+            padding: 20px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            background-color: #f9f9f9;
+        }
+        .wellness-professionals h3 {
+            margin-top: 0;
         }
         button.vote-button, button.stake-button {
             background-color: #4CAF50;
@@ -78,7 +90,7 @@
 <body>
     <header>
         <img src="logo.png" alt="Logo">
-        <h1>dAPP</h1>
+        <h1>Mindfulness dAPP</h1>
     </header>
     <main>
         <section class="vote-section">
@@ -89,117 +101,136 @@
                 <button type="button" class="stake-button">Stake Tokens</button>
             </form>
             <p id="voteResult" class="result"></p>
-            <script>
-                let web3;
-                let contract;
-                const contractAddress = 'YOUR_SMART_CONTRACT_ADDRESS'; // Replace with your contract address
-                const abi = [
-                    // Replace with your contract ABI
-                    {
-                        "constant": false,
-                        "inputs": [
-                            {
-                                "name": "_name",
-                                "type": "string"
-                            },
-                            {
-                                "name": "_bio",
-                                "type": "string"
-                            },
-                            {
-                                "name": "_profilePicture",
-                                "type": "string"
-                            },
-                            {
-                                "name": "_isWellnessProfessional",
-                                "type": "bool"
-                            }
-                        ],
-                        "name": "createProfile",
-                        "outputs": [],
-                        "payable": false,
-                        "stateMutability": "nonpayable",
-                        "type": "function"
-                    },
-                    {
-                        "constant": false,
-                        "inputs": [
-                            {
-                                "name": "_isWellnessProfessional",
-                                "type": "bool"
-                            }
-                        ],
-                        "name": "setWellnessProfessionalStatus",
-                        "outputs": [],
-                        "payable": false,
-                        "stateMutability": "nonpayable",
-                        "type": "function"
-                    },
-                    {
-                        "constant": false,
-                        "inputs": [],
-                        "name": "stakeTokens",
-                        "outputs": [],
-                        "payable": true,
-                        "stateMutability": "payable",
-                        "type": "function"
-                    },
-                    {
-                        "constant": false,
-                        "inputs": [
-                            {
-                                "name": "wellnessProfessional",
-                                "type": "address"
-                            }
-                        ],
-                        "name": "voteForService",
-                        "outputs": [],
-                        "payable": false,
-                        "stateMutability": "nonpayable",
-                        "type": "function"
-                    }
-                ];
-
-                async function init() {
-                    if (window.ethereum) {
-                        web3 = new Web3(window.ethereum);
-                        await window.ethereum.request({ method: 'eth_requestAccounts' });
-                        contract = new web3.eth.Contract(abi, contractAddress);
-                    } else {
-                        alert('Please install MetaMask!');
-                    }
-                }
-
-                document.querySelectorAll('.vote-button').forEach(button => {
-                    button.addEventListener('click', async function() {
-                        const voteType = this.getAttribute('data-vote');
-                        const accounts = await web3.eth.getAccounts();
-                        await contract.methods.voteForService(accounts[0]).send({ from: accounts[0] });
-                        // Update vote results if needed
-                    });
-                });
-
-                document.querySelector('.stake-button').addEventListener('click', async function() {
-                    const accounts = await web3.eth.getAccounts();
-                    const amountToStake = prompt("Enter the amount of ETH to stake:");
-                    if (amountToStake && !isNaN(amountToStake) && amountToStake > 0) {
-                        await contract.methods.stakeTokens().send({ from: accounts[0], value: web3.utils.toWei(amountToStake, 'ether') });
-                        alert('Staked successfully!');
-                    } else {
-                        alert('Invalid amount');
-                    }
-                });
-
-                window.addEventListener('load', init);
-            </script>
+        </section>
+        <section class="wellness-professionals">
+            <h3>Wellness Professionals</h3>
+            <ul id="professionalList"></ul>
         </section>
         <section>
             <h2>About this dApp</h2>
-            <p>This is a sample voting dApp frontend. In future updates, this dApp will be expanded with smart contract integration, allowing for decentralized and transparent voting on the blockchain.</p>
+            <p>This is a sample voting dApp frontend. In future updates, this dApp will be expanded with smart contract integration, allowing for decentralized and transparent voting for wellness professionals and life coaches.</p>
         </section>
     </main>
     <footer>
         <p>© 2025 Mindfulness Community</p>
     </footer>
+    <script>
+        let web3;
+        let contract;
+        const contractAddress = 'YOUR_SMART_CONTRACT_ADDRESS'; // Replace with your contract address
+        const abi = [
+            // Replace with your contract ABI
+            {
+                "constant": false,
+                "inputs": [
+                    {
+                        "name": "_name",
+                        "type": "string"
+                    },
+                    {
+                        "name": "_bio",
+                        "type": "string"
+                    },
+                    {
+                        "name": "_profilePicture",
+                        "type": "string"
+                    },
+                    {
+                        "name": "_isWellnessProfessional",
+                        "type": "bool"
+                    }
+                ],
+                "name": "createProfile",
+                "outputs": [],
+                "payable": false,
+                "stateMutability": "nonpayable",
+                "type": "function"
+            },
+            {
+                "constant": false,
+                "inputs": [
+                    {
+                        "name": "_isWellnessProfessional",
+                        "type": "bool"
+                    }
+                ],
+                "name": "setWellnessProfessionalStatus",
+                "outputs": [],
+                "payable": false,
+                "stateMutability": "nonpayable",
+                "type": "function"
+            },
+            {
+                "constant": false,
+                "inputs": [],
+                "name": "stakeTokens",
+                "outputs": [],
+                "payable": true,
+                "stateMutability": "payable",
+                "type": "function"
+            },
+            {
+                "constant": false,
+                "inputs": [
+                    {
+                        "name": "wellnessProfessional",
+                        "type": "address"
+                    }
+                ],
+                "name": "voteForService",
+                "outputs": [],
+                "payable": false,
+                "stateMutability": "nonpayable",
+                "type": "function"
+            }
+        ];
+
+        async function init() {
+            if (window.ethereum) {
+                web3 = new Web3(window.ethereum);
+                await window.ethereum.request({ method: 'eth_requestAccounts' });
+                contract = new web3.eth.Contract(abi, contractAddress);
+                loadWellnessProfessionals();
+            } else {
+                alert('Please install MetaMask!');
+            }
+        }
+
+        async function loadWellnessProfessionals() {
+            // Fetch the list of wellness professionals and display them
+            const professionals = [
+                { name: 'Dr. John Doe', address: '0x123...' },
+                { name: 'Jane Smith', address: '0x456...' }
+            ];
+            const professionalList = document.getElementById('professionalList');
+            professionals.forEach(professional => {
+                const li = document.createElement('li');
+                li.textContent = professional.name;
+                professionalList.appendChild(li);
+            });
+        }
+
+        document.querySelectorAll('.vote-button').forEach(button => {
+            button.addEventListener('click', async function() {
+                const voteType = this.getAttribute('data-vote');
+                const accounts = await web3.eth.getAccounts();
+                await contract.methods.voteForService(accounts[0]).send({ from: accounts[0] });
+                // Update vote results if needed
+            });
+        });
+
+        document.querySelector('.stake-button').addEventListener('click', async function() {
+            const accounts = await web3.eth.getAccounts();
+            const amountToStake = prompt("Enter the amount of ETH to stake:");
+            if (amountToStake && !isNaN(amountToStake) && amountToStake > 0) {
+                await contract.methods.stakeTokens().send({ from: accounts[0], value: web3.utils.toWei(amountToStake, 'ether') });
+                alert('Staked successfully!');
+            } else {
+                alert('Invalid amount');
+            }
+        });
+
+        window.addEventListener('load', init);
+    </script>
 </body>
 </html>
