--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
         <!-- Video Section -->
         <section class="video__footage__container">
             <div class="video__fotage">
-                <iframe src="https://player.vimeo.com/video/323795266" frameborder="0" allow="autoplay; fullscreen; picture-in-picture"
-                    allowfullscreen class="wellness__video"></iframe>
+                <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/251192195?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Mindfulness"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
             </div>
             <div class="video__footage__text">
                 <p>
@@ -216,5 +215,5 @@
     </script>
 </body>
 
-    </html>
+                </html>
 
